# billow

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  TODO.md  install.sh  vendor.toml  vm-test.sh
agent/: Cargo.toml
agent/src/: main.rs
agent/src/containerd_runtime/: cleanup.rs  container.rs  image.rs  mod.rs  namespace.rs  network.rs  reference.rs  rootfs.rs  run_io.rs  spec.rs
agent/src/workload/: logs.rs  mod.rs  policy.rs  reconcile.rs  runtime.rs  storage.rs  types.rs  watch.rs
api/: Cargo.toml  api.proto  build.rs  echo.proto
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
init/: Cargo.toml
init/src/: containerd.rs  install.rs  main.rs  paths.rs  system.rs  systemd.rs
init/tests/: install_flow.rs
vm-pool/: Cargo.toml
vm-pool/src/: client.rs  daemon.rs  main.rs  multipass.rs  pool.rs
