[workspace]
members = ["agent", "api", "cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
billow-api = { path = "api" }
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
