[package]
name = "billow-agent"
version.workspace = true
edition.workspace = true

[dependencies]
billow-api.workspace = true
containerd-client = "0.9.0"
oci-spec = "0.10.0"
prost.workspace = true
prost-types = "0.14.3"
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio.workspace = true
tonic.workspace = true
uuid = { version = "1.23.2", features = ["v4"] }
